--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <ul>
                 <li>
                     <a href="#">Lab 1</a>
+		    <a href="./Lab02.html">Lab 2</a>
                 </li>
             </ul>
         </td>
