--- a/Lab04.html
+++ b/Lab04.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
-    <script type="text/javascript" src="main.js"></script>
+    <link rel="stylesheet" href="Lab04.css">
+    <script type="text/javascript" src="Lab04.js"></script>
     <title>Lab04</title>
 </head>
 
