--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 		<li>
 		    <a href="./Lab03.html">Lab 3</a>
 		</li>
+		<li>
+		    <a href="./Lab04.html">Lab 4</a>
+		</li>
             </ul>
         </td>
     </tr>
