--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 		<li>
 		    <a href="./Lab04.html">Lab 4</a>
 		</li>
+		<li>
+		    <a href="https://chirag-lab05.herokuapp.com/">Lab 5</a>
+		</li>
             </ul>
         </td>
     </tr>
