--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 		<li>
 		    <a href="https://chirag-lab05.herokuapp.com/">Lab 5</a>
 		</li>
+		<li>
+		    <a href="https://chiraglab06.herokuapp.com/">Lab 6</a>
+		</li>
             </ul>
         </td>
     </tr>
